Foot Link Fix & Pagebuilder Menu Link fix, Secondary BTN jump on hover fix

--- a/app/design/frontend/HumanElement/stover_default/web/css/source/_pagebuilder_buttons_extend.less
+++ b/app/design/frontend/HumanElement/stover_default/web/css/source/_pagebuilder_buttons_extend.less
@@ -8,33 +8,6 @@
 //  _____________________________________________
 
 & when (@media-common = true) {
-    a,
-    button,
-    div {
-        &.pagebuilder {
-            &-button-link {
-                font-size: @font-size__base;
-                color: @color-black;
-                font-weight: @font-weight__regular;
-                text-decoration: none;
-                text-transform: capitalize;
-            }
-        }
-    }
-
-    .footer {
-        a,
-        button,
-        div {
-            &.pagebuilder {
-                &-button-link {
-                    text-decoration: none;
-                    text-transform: capitalize;
-                }
-            }
-        }
-    }
-
     .green-link {
         a,
         button,
@@ -67,8 +40,9 @@
             .lib-button-s();
             font-weight: @font-weight__regular;
             font-family: @font-family__base;
-            text-transform: uppercase;
-            text-decoration: underline;
+            color: @color-black;
+            //text-transform: uppercase;
+            text-decoration: none;
         }
 
         &.pagebuilder-button-primary {
@@ -85,7 +59,7 @@
         &.pagebuilder-button-secondary {
             .lib-button-s();
             text-transform: uppercase;
-            border-width: 0px;
+
             &:hover,
             &:active,
             &:focus {
